--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 			<section>
 				<img id="headshot" src="assets/images/squareheadshot.jpg" height="250" width="250">
 				<p id="aboutmecontent">
-					Hello World, my name is Maxwell Cutri and I am currently a student in the Front-End Web Development Bootcamp at the University of Denver.  I am excited to put together my very first webpage, built from scratch. Using strictly HTML and CSS, I have built this entire portfolio you see here. Soon, I'll be adding more projects into my portfolio page, along with more resources pertaining to my work. I also plan to spice the page up with some JavaScript once I hone my skills a bit more.
+					Hello there! My name is Maxwell Cutri and I am currently a student in the Front-End Web Development Bootcamp at the University of Denver.  I am excited to put together my very first webpage, built from scratch. Using strictly HTML and CSS, I have built this entire portfolio you see here. Soon, I'll be adding more projects into my portfolio page, along with more resources pertaining to my work. I also plan to spice the page up with some JavaScript once I hone my skills a bit more.
 					<br>
 					<br>
 					Beside basic programming language, I am well-versed in Adobe Creative Suite and Wordpress. I plan to continue working hard and developing more valuable skills to bring to the work force.
