updated social links

--- a/index.html
+++ b/index.html
@@ -52,11 +52,11 @@
 				 <img id="linkedin" src="assets/images/linkedin.jpg" height="50" width="50">
 			</a>
 
-			<a href="https://www.linkedin.com/in/maxwellcutri/" target="_blank">
+			<a href="https://github.com/Mpcutri" target="_blank">
 				 <img id="github" src="assets/images/github.jpg" height="50" width="50">
 			</a>
 
-			<a href="https://www.linkedin.com/in/maxwellcutri/" target="_blank">
+			<a href="https://stackoverflow.com/users/edit/9182384" target="_blank">
 				 <img id="stackover" src="assets/images/stackoverflow.png" height="50" width="50">
 			</a>
 
