--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
 			<div class="navmargin">
 				<ul class="navtext">
 					<li id="about">
-						<a href="">About</a>
+						<a href="index.HTML">About</a>
 					</li><p id="bar">|</p>
 					<li id="portfolio">
-						<a href="">Portfolio</a>
+						<a href="portfolio.html">Portfolio</a>
 					</li><p id="bar">|</p>
 					<li id="contact">
-						<a href="">Contact</a>
+						<a href="contact.html">Contact</a>
 					</li>  
 				</ul>
 				<h1 id="yourname">Maxwell Cutri</h1>
@@ -26,6 +26,8 @@
 	</header>
 	<section class="stripe1 clearfix"> 
 	</section>
+
+<div class="clearfix">
 
 	<div class="content">
 		<section id="aboutme">
@@ -63,9 +65,17 @@
 
 		</section>
 
-
-
-
+		
 	</div> <!-- background -->
+</div>	
+	<section class="stripe2"> 
+	</section>
+		<section id="footer">
+		
+			<p id="footertext"> © Copyright 2018 - Maxwell Cutri</p>
+	
+		</section>
+
+
 </body>
 </html>
