minor link changes

--- a/portfolio.html
+++ b/portfolio.html
@@ -30,7 +30,7 @@
 	<div class="content">
 		<section id="aboutme">
 			<h2 id="aboutmetext">
-				About Me
+				Portfolio
 			</h2>
 			<section>
 				<img id="headshot" src="assets/images/squareheadshot.jpg" height="250" width="250">
