added Porftolio Images

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 				 <img id="github" src="assets/images/github.jpg" height="50" width="50">
 			</a>
 
-			<a href="https://stackoverflow.com/users/edit/9182384" target="_blank">
+			<a href="https://stackoverflow.com/users/9182384/maxwell-cutri?tab=profile" target="_blank">
 				 <img id="stackover" src="assets/images/stackoverflow.png" height="50" width="50">
 			</a>
 
