--- a/contact.html
+++ b/contact.html
@@ -3,6 +3,7 @@
 <head>
 	<title>Maxwell Cutri's Portfolio</title>
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
+		<link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
 </head>
 <body>
 	<header>
@@ -27,15 +28,17 @@
 	<section class="stripe1 clearfix"> 
 	</section>
 
+<div class="clearfix">
+
 	<div class="content">
 		<section id="aboutme">
 			<h2 id="aboutmetext">
-				Contact
+				About Me
 			</h2>
 			<section>
 				<img id="headshot" src="assets/images/squareheadshot.jpg" height="250" width="250">
 				<p id="aboutmecontent">
-					USE BOOTSTRAP for FILLOUT FORM
+					USE BOOTSTRAP FOR FILLOUT FORM
 				</p>
 			</section>
 			
@@ -52,17 +55,24 @@
 			<a href="https://github.com/Mpcutri" target="_blank">
 				 <img id="github" src="assets/images/github.jpg" height="50" width="50">
 			</a>
-
-			<a href="https://stackoverflow.com/users/edit/9182384" target="_blank">
+https://stackoverflow.com/users/9182384/maxwell-cutrihttps://stackoverflow.com/users/edit/9182384" target="_blank">
 				 <img id="stackover" src="assets/images/stackoverflow.png" height="50" width="50">
 			</a>
 
 
 		</section>
 
-
-
-
+		
 	</div> <!-- background -->
+</div>	
+	<section class="stripe2"> 
+	</section>
+		<section id="footer">
+		
+			<p id="footertext"> © Copyright 2018 - Maxwell Cutri</p>
+	
+		</section>
+
+
 </body>
 </html>
