--- a/portfolio.html
+++ b/portfolio.html
@@ -3,6 +3,7 @@
 <head>
 	<title>Maxwell Cutri's Portfolio</title>
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
+		<link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
 </head>
 <body>
 	<header>
@@ -27,19 +28,54 @@
 	<section class="stripe1 clearfix"> 
 	</section>
 
+<div class="clearfix">
+
 	<div class="content">
-		<section id="aboutme">
-			<h2 id="aboutmetext">
+		<section id="portfolio2">
+			<h2 id="portfoliotext">
 				Portfolio
 			</h2>
-			<section>
-				<img id="headshot" src="assets/images/squareheadshot.jpg" height="250" width="250">
-				<p id="aboutmecontent">
-					Hello there! My name is Maxwell Cutri and I am currently a student in the Front-End Web Development Bootcamp at the University of Denver.  I am excited to put together my very first webpage, built from scratch. Using strictly HTML and CSS, I have built this entire portfolio you see here. Soon, I'll be adding more projects into my portfolio page, along with more resources pertaining to my work. I also plan to spice the page up with some JavaScript once I hone my skills a bit more.
-					<br>
-					<br>
-					Beside basic programming language, I am well-versed in Adobe Creative Suite and Wordpress. I plan to continue working hard and developing more valuable skills to bring to the work force.
-				</p>
+			<section class="portfoliotable">
+					<!-- <ul>
+						<li><a href""><img src="assets/images/squareheadshot.jpg" height=200 width=300>
+							</a>
+						</li>	
+						<li><a href""><img src="assets/images/squareheadshot.jpg" height=200 width=300>
+							</a>
+						</li>	
+						<li><a href""><img src="assets/images/squareheadshot.jpg" height=200 width=300>
+							</a>
+						</li>	
+						<li><a href""><img src="assets/images/squareheadshot.jpg" height=200 width=300>
+							</a>
+						</li>	
+						<li><a href""><img src="assets/images/squareheadshot.jpg" height=200 width=300>
+							</a>
+						</li> -->					
+		<table>
+        <thead>
+            <tr>
+                <th scope="col"><a href""><img src="assets/images/placeholder.jpg">
+							</a></th>
+                <th scope="col"><a href""><img src="assets/images/placeholder2.jpg">
+							</a></th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td><a href""><img src="assets/images/placeholder4.jpg" height=150 width=225>
+							</a></td>
+                <td><a href""><img src="assets/images/placeholder3.jpg">
+							</a></td>
+            </tr>
+            <tr>
+                <td><a href""><img src="assets/images/placeholder5.jpg">
+							</a></td>
+              
+            </tr>
+            
+        </tbody>
+        </table>
 			</section>
 			
 		</section>
@@ -56,16 +92,24 @@
 				 <img id="github" src="assets/images/github.jpg" height="50" width="50">
 			</a>
 
-			<a href="https://stackoverflow.com/users/edit/9182384" target="_blank">
+			<a href="https://stackoverflow.com/users/9182384/maxwell-cutri?tab=profile" target="_blank">
 				 <img id="stackover" src="assets/images/stackoverflow.png" height="50" width="50">
 			</a>
 
 
 		</section>
 
-
-
-
+		
 	</div> <!-- background -->
+</div>	
+	<section class="stripe2"> 
+	</section>
+		<section id="footer">
+		
+			<p id="footertext"> © Copyright 2018 - Maxwell Cutri</p>
+	
+		</section>
+
+
 </body>
 </html>
