updated contact form

--- a/contact.html
+++ b/contact.html
@@ -33,13 +33,52 @@
 	<div class="content">
 		<section id="aboutme">
 			<h2 id="aboutmetext">
-				About Me
+				Contact
 			</h2>
 			<section>
-				<img id="headshot" src="assets/images/squareheadshot.jpg" height="250" width="250">
-				<p id="aboutmecontent">
-					USE BOOTSTRAP FOR FILLOUT FORM
-				</p>
+				<form name="htmlform" method="post" action="html_form_send.php">
+<table width="450px">
+</tr>
+<tr>
+ <td valign="top">
+  <label for="first_name">Name</label>
+ </td>
+ <td valign="top">
+  <input  type="text" name="first_name" maxlength="50" size="30">
+ </td>
+</tr>
+ <td valign="top">
+  <label for="email">Email Address</label>
+ </td>
+ <td valign="top">
+  <input  type="text" name="email" maxlength="80" size="30">
+ </td>
+ 
+</tr>
+<tr>
+ <td valign="top">
+  <label for="telephone">Telephone Number</label>
+ </td>
+ <td valign="top">
+  <input  type="text" name="telephone" maxlength="30" size="30">
+ </td>
+</tr>
+<tr>
+ <td valign="top">
+  <label for="comments">Message</label>
+ </td>
+ <td valign="top">
+  <textarea id="messagebox" name="comments" maxlength="1000" cols="25" rows="6"></textarea>
+ </td>
+ 
+</tr>
+<tr>
+ <td colspan="2" style="text-align:center">
+  <input id="submit" type="submit" value="Submit"> <a href=""></a>
+ </td>
+</tr>
+</table>
+</form>
 			</section>
 			
 		</section>
@@ -55,7 +94,8 @@
 			<a href="https://github.com/Mpcutri" target="_blank">
 				 <img id="github" src="assets/images/github.jpg" height="50" width="50">
 			</a>
-https://stackoverflow.com/users/9182384/maxwell-cutrihttps://stackoverflow.com/users/edit/9182384" target="_blank">
+
+			<a href="https://stackoverflow.com/users/9182384/maxwell-cutri?tab=profile" target="_blank">
 				 <img id="stackover" src="assets/images/stackoverflow.png" height="50" width="50">
 			</a>
 
